--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,12 @@
 [deps]
+AlgebraicPetri = "4f99eebe-17bf-4e98-b6a1-2c4f205a959b"
+Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+LabelledArrays = "2ee39098-c373-598a-b85f-a56591580800"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 
 [compat]
 julia = "1.6"
